# yarp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  build_docs.py  pyproject.toml  update_version.py
.github/workflows/: docs-check.yml  docs.yml  pip_package.yaml  pip_package.yml  test_on_pr_master.yml
docs/: Makefile  README.md
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
docs/source/_static/: custom.css
tests/: README.md  conftest.py  test_integration.py  test_local_memory_exceptions.py  test_local_vector_index.py  test_performance.py  test_preflight_checks.py  test_utils.py  test_vector_models.py
yarp/: __init__.py
yarp/exceptions/: __init__.py  base.py  local_memory_exceptions.py  runtime.py
yarp/models/: __init__.py  vector_models.py
yarp/runtime/: preflight_checks.py
yarp/vector_index/: __init__.py  local_vector_index.py
